Bug 114231 - function ERROR() returns "Error 11 : No error text available!"
Summary: function ERROR() returns "Error 11 : No error text available!"
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All All
: high major
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:6.1.0 target:6.0.0.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2017-12-04 07:56 UTC by raal
Modified: 2017-12-05 17:25 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
test file (8.67 KB, application/vnd.oasis.opendocument.text)
2017-12-04 07:56 UTC, raal
Details
correct result (10.95 KB, image/png)
2017-12-04 07:58 UTC, raal
Details
incorrect result (10.27 KB, image/png)
2017-12-04 07:58 UTC, raal
Details

Note You need to log in before you can comment on or make changes to this bug.
Description raal 2017-12-04 07:56:17 UTC
Description:
 According to https://help.libreoffice.org/Basic/Error_Function_Runtime and http://www.excelfunctions.net/vba-error-function.html

11 Division by zero


but error(11) return "Error 11   : No error text available!"

Steps to Reproduce:
1.open attached file
2.run macro


Actual Results:  
"Error 11   : No error text available!"

Expected Results:
"Division by zero"


Reproducible: Always


User Profile Reset: No



Additional Info:


User-Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:57.0) Gecko/20100101 Firefox/57.0
Comment 1 raal 2017-12-04 07:56:48 UTC
Created attachment 138205 [details]
test file
Comment 2 raal 2017-12-04 07:58:02 UTC
Created attachment 138206 [details]
correct result
Comment 3 raal 2017-12-04 07:58:26 UTC
Created attachment 138207 [details]
incorrect result
Comment 4 raal 2017-12-04 07:59:33 UTC
This seems to have begun at the below commit.
Adding Cc: to Noel Grandin ; Could you possibly take a look at this one?
Thanks
 9f704695ff4127b8c9e3ff4a796b207cea87e4aa is the first bad commit
commit 9f704695ff4127b8c9e3ff4a796b207cea87e4aa
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Fri Aug 25 10:21:28 2017 +0200

    source 7ca950ec744b7af1d15724ec2abc296573a641e4

author	Noel Grandin <noelgrandin@gmail.com>	2017-08-23 19:25:02 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2017-08-25 09:03:42 +0200
commit 7ca950ec744b7af1d15724ec2abc296573a641e4 (patch)
tree c224a4bb30c6379c4716035d3ae413bd91c0e26d
parent 5bd31bf44301fdb1938d38eae7317745f35d9db1 (diff)
no need to use ERRCODE_RES_MASK here
the relevant usage sites already call GetRest() before comparing
Comment 5 Xisco Faulí 2017-12-04 10:45:43 UTC
i've tried different error expressions from https://help.libreoffice.org/Basic/Error_Function_Runtime and none of them work.

Increasing importance

Version: 6.1.0.0.alpha0+
Build ID: 889c72a7e54f241342f42b1b0a05858902228cbc
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES-valencia (ca_ES.UTF-8); Calc: group threaded
Comment 6 Commit Notification 2017-12-05 14:20:57 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d915cb417befeb4a2aa1913e4b91d8cc5297c3ec

Resolves: tdf#114231 do not mask ErrCode with GetRest()

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Eike Rathke (retired, only occasionally showing up) 2017-12-05 14:23:49 UTC
Pending Jenkins for 6-0 https://gerrit.libreoffice.org/45882
Comment 8 Commit Notification 2017-12-05 17:25:54 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=11667a8df2e4aad7c14c1ef3fdb80f61515832fc&h=libreoffice-6-0

Resolves: tdf#114231 do not mask ErrCode with GetRest()

It will be available in 6.0.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.